tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore.stderr
error: Expected identifier
 --> tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore.rs:4:19
  |
4 | #[iteration_order(_)]
  |                   ^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore.rs`
