tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
#[iteration_order(_)]
enum Enum {
    A, B, C
}
